# PatientQuery

./: CMakeLists.txt  ConnectionHandler.h  ConnectionHendle.cpp  DataBaseWorker.cpp  DataBaseWorker.h  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  PatientController.h  PatientQueue.cpp  PatientQueue.h  Queue.h  README.md  Visit.cpp  Visit.h  patient_queue.cpp  patients.csv  visits.csv  Руководство оператора «Система управления очередью....docx
doc/: Мобильный_кабинет_Руководство_оператора_2.doc  Описание_программы_Мобильный_кабинет_2.doc  документация(руководство оператора).docx  документация.docx
include/: DataBaseWorker.h  Doctor.h  Patient.h  PatientQueue.h  Queue.h  Visit.h
new_include/: ConnectionHandlerClient.hpp  ConnectionHandlerDoctor.hpp  DatabaseWorker.hpp  Doctor.hpp  Node.hpp  Patient.hpp  PatientController.hpp  Queue.hpp  Visit.hpp
new_src/: ConnectionHandlerClient.cpp  ConnectionHandlerDoctor.cpp  DatabaseWorker.cpp  Doctor.cpp  Patient.cpp  PatientController.cpp  main.cpp
src/: DataBaseWorker.cpp  Doctor.cpp  Patient.cpp  PatientQueue.cpp  Visit.cpp  main.cpp
